@@ -4,14 +4,14 @@
 ".hgignore": {"timestamp": 1452239748.88},
 ".hgtags": {"timestamp": 1463749936.76},
 "AUTHORS": {"timestamp": 1352751912.63},
-"Changes.txt": {"timestamp": 1433918846.11},
+"Changes.txt": {"timestamp": 1470125931.48},
 "cmake/FindGPhoto2PkgConfig.cmake": {"timestamp": 1447408231.44},
 "cmake/FindGStreamerOSSBUILD.cmake": {"timestamp": 1352751913.01},
 "cmake/FindGStreamerPkgConfig.cmake": {"timestamp": 1447408230.96},
 "cmake/FindGStreamerPluginsPkgConfig.cmake": {"timestamp": 1352751913.01},
 "cmake/FindGStreamerWinX86.cmake": {"timestamp": 1391175042.42},
 "cmake/FindV4L2PkgConfig.cmake": {"timestamp": 1447408231.48},
-"CMakeLists.txt": {"timestamp": 1466676971.29},
+"CMakeLists.txt": {"timestamp": 1470117915.19},
 "COPYING": {"timestamp": 1433504168.34},
 "deb/changelog": {"timestamp": 1352751913.02},
 "deb/changelog.gz": {"timestamp": 1352751913.02},
@@ -259,8 +259,8 @@
 "src/domain/undo/undotakeselect.h": {"timestamp": 1448092225.53},
 "src/frontends/frontend.h": {"timestamp": 1469515301.63},
 "src/frontends/observer.h": {"timestamp": 1369810339.67},
-"src/frontends/qtfrontend/dialogs/aboutdialog.cpp": {"timestamp": 1447764319.36},
-"src/frontends/qtfrontend/dialogs/aboutdialog.h": {"timestamp": 1448136344.57},
+"src/frontends/qtfrontend/dialogs/aboutdialog.cpp": {"timestamp": 1470118950.06},
+"src/frontends/qtfrontend/dialogs/aboutdialog.h": {"timestamp": 1470118512.2},
 "src/frontends/qtfrontend/dialogs/cameracontrollerdialog.cpp": {"timestamp": 1456675287.88},
 "src/frontends/qtfrontend/dialogs/cameracontrollerdialog.h": {"timestamp": 1456675308.41},
 "src/frontends/qtfrontend/dialogs/descriptiondialog.cpp": {"timestamp": 1448136572.41},
@@ -282,7 +282,7 @@
 "src/frontends/qtfrontend/frameview/frameviewimage.h": {"timestamp": 1470035082.85},
 "src/frontends/qtfrontend/frameview/frameviewinterface.cpp": {"timestamp": 1456298363.75},
 "src/frontends/qtfrontend/frameview/frameviewinterface.h": {"timestamp": 1456298015.66},
-"src/frontends/qtfrontend/mainwindowgui.cpp": {"timestamp": 1469603267.54},
+"src/frontends/qtfrontend/mainwindowgui.cpp": {"timestamp": 1470121161.71},
 "src/frontends/qtfrontend/mainwindowgui.h": {"timestamp": 1469602864.8},
 "src/frontends/qtfrontend/menuframe.cpp": {"timestamp": 1447831408.46},
 "src/frontends/qtfrontend/menuframe.h": {"timestamp": 1447831419.54},
@@ -373,8 +373,8 @@
 "src/technical/grabber/windowsuvccontroller.h": {"timestamp": 1405492958.93},
 "src/technical/preferenceselement.cpp": {"timestamp": 1447836637.17},
 "src/technical/preferenceselement.h": {"timestamp": 1447836680.46},
-"src/technical/preferencestool.cpp": {"timestamp": 1466619066.59},
-"src/technical/preferencestool.h": {"timestamp": 1454404254.38},
+"src/technical/preferencestool.cpp": {"timestamp": 1470118586.44},
+"src/technical/preferencestool.h": {"timestamp": 1470118575.46},
 "src/technical/util.cpp": {"timestamp": 1447836331.04},
 "src/technical/util.h": {"timestamp": 1429797220.52},
 "src/technical/videoencoder/ffmpegencoder.cpp": {"timestamp": 1448352616.85},
